# frame

./: .gitignore  Cargo.toml  GIT.md  LICENSE-APACHE  PROJECT.md  README.md  TODO.md  VIM.md  deny.toml  typos.toml
.github/workflows/: ci.yml
crates/frame/: Cargo.toml
crates/frame-core/: Cargo.toml
crates/frame-core/src/: lib.rs
crates/frame-core/src/patch/: mod.rs
crates/frame-core/src/review/: buffer.rs  mod.rs  overlay.rs  snapshot.rs
crates/frame-core/src/syntax/: chunk.rs  highlight.rs  language.rs  mod.rs
crates/frame-git/: Cargo.toml
crates/frame-git/src/: lib.rs
crates/frame-git/src/repo/: mod.rs  shell.rs  ship.rs
crates/frame-view/: Cargo.toml
crates/frame-view/src/: lib.rs
crates/frame/src/: main.rs
crates/libframe/: Cargo.toml
crates/libframe/src/: diff.rs  git.rs  lib.rs
