[workspace]
members = ["crates/frame", "crates/frame-view", "crates/libframe"]
default-members = ["crates/frame", "crates/frame-view", "crates/libframe"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phongndo/frame"
homepage = "https://github.com/phongndo/frame"

[workspace.dependencies]
ratatui = "0.30.0"
thiserror = "2.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
unimplemented = "deny"
panic = "deny"
