[workspace]
members = [
  "crates/frame",
  "crates/frame-core",
  "crates/frame-git",
  "crates/frame-view",
]
default-members = [
  "crates/frame",
  "crates/frame-core",
  "crates/frame-git",
  "crates/frame-view",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phongndo/frame"
homepage = "https://github.com/phongndo/frame"

[workspace.dependencies]
notify = "8.2.0"
ratatui = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tree-sitter = "0.26.6"
tree-sitter-highlight = "0.26.6"
tree-sitter-md = "0.5.3"
tree-sitter-rust = "0.24.1"
tree-sitter-toml-ng = "0.7.0"
unicode-width = "0.2.2"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"
unimplemented = "deny"
panic = "deny"
