[package]
name = "frame-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Core patch parsing and review-domain types for Frame."

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
