[package]
name = "frame-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Core patch parsing and review-domain types for Frame."

[dependencies]
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-highlight.workspace = true
tree-sitter-md.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-toml-ng.workspace = true
unicode-width.workspace = true

[lints]
workspace = true
