[package]
name = "frame-git"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Git-backed snapshot loading for Frame."

[dependencies]
frame-core = { version = "0.1.0", path = "../frame-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
