[package]
name = "frame-view"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Read-only TUI viewer for Frame diffs."

[dependencies]
frame-core = { version = "0.1.0", path = "../frame-core" }
frame-git = { version = "0.1.0", path = "../frame-git" }
notify.workspace = true
ratatui.workspace = true
thiserror.workspace = true
unicode-width.workspace = true

[lints]
workspace = true
