[package]
name = "frame"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Placeholder CLI crate for the Frame application."

[dependencies]
frame-git = { version = "0.1.0", path = "../frame-git" }
frame-view = { version = "0.1.0", path = "../frame-view" }

[lints]
workspace = true
